# ProyectoEDI

./: CMakeLists.txt  main.cpp  progPrincipal.cpp
controlador/: Artista.cpp  Fecha.cpp  GestorArtista.cpp  GestorUsuario.cpp  PlayList.cpp  PruebaGestorUsuarios.cpp  PruebaPlaylist.cpp  PruebaSistema.cpp  Sistema.cpp  cancion.cpp  persona.cpp  progPrincipal.cpp  pruebaArtista.cpp  pruebaPersona.cpp
modelo/: Artista.h  BSTree.h  Cola.h  Fecha.h  GestorArtista.h  GestorUsuario.h  KeyValue.h  ListaDPI.h  PlayList.h  PruebaGestorUsuarios.h  PruebaPlaylist.h  PruebaSistema.h  Sistema.h  cancion.h  persona.h  pruebaArtista.h  pruebaPersona.h
